--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 </head>
 <body>
-    <div id="quiz"></div>
     <div id="questions-container"></div>
+    <div id="nav-buttons">
+        <button id="prev-button" disabled>Previuos</button>
+        <button id="next-button">Next</button>
+    </div>
 
 
 
