--- a/quiz.html
+++ b/quiz.html
@@ -43,8 +43,8 @@
 
 <div id="question-container"></div>
 <div id="answers-container"></div>
-<button id="next-button" onclick="CheckResult()">Next</button>
-
+<button id="next-button" >Next</button>
+<button id="result-button">Check Result</button> 
 
 
     <!-- Bootstrap Link -->
