--- a/quiz.html
+++ b/quiz.html
@@ -40,11 +40,14 @@
 
 
 
-
+<div id="quest"></div>
 <div id="question-container"></div>
 <div id="answers-container"></div>
+<ul>
+    
+</ul>
 <button id="next-button" >Next</button>
-<button id="result-button">Check Result</button> 
+<button id="result-button" onclick="result()">Check Result</button> 
 
 
     <!-- Bootstrap Link -->
