--- a/quiz.html
+++ b/quiz.html
@@ -47,12 +47,23 @@
     
 </ul>
 <button id="next-button" >Next</button>
+<br>
 <button id="result-button" onclick="result()">Check Result</button> 
+<div id="quiz"></div>
+
+
+    <label for="male">Male</label>
+    <input class="gender" type="radio" name="gender" id="male" value="male">
+    <label for="female">Female</label>
+    <input class="gender" type="radio" name="gender" id="female" value="female">
+    <br>
+    <button onclick="hello()">submit</button>
 
 
     <!-- Bootstrap Link -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- JavaScript Link -->
     <script src="./Assets/quiz.js"></script>
 </body>
 </html>
