--- a/quiz.html
+++ b/quiz.html
@@ -37,27 +37,14 @@
 <h1 style="text-align: center;color: white;margin-top: 3%;">Coming Soon...</h1>
 
 
-
-
-
 <div id="quest"></div>
 <div id="question-container"></div>
 <div id="answers-container"></div>
-<ul>
-    
-</ul>
-<button id="next-button" >Next</button>
-<br>
-<button id="result-button" onclick="result()">Check Result</button> 
+
+
 <div id="quiz"></div>
-
-
-    <label for="male">Male</label>
-    <input class="gender" type="radio" name="gender" id="male" value="male">
-    <label for="female">Female</label>
-    <input class="gender" type="radio" name="gender" id="female" value="female">
-    <br>
-    <button onclick="hello()">submit</button>
+<button id="next-button" >Next</button><br><br>
+<button id="result-button" onclick="Result()">Check Result</button> 
 
 
     <!-- Bootstrap Link -->
