--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
 
 </head>
 <body class="allcont1"> 
-    <p style="text-align: center;font-weight: lighter;"><b>Note: </b><span>To </span><b>print</b> this <b><span>report card</span></b> click this button<button onclick="printSection()" style="margin-left: 0.5%;"><b>Print Report Card</b></button></p>
+    <p style="text-align: center;font-weight: lighter;color: white;"><b>Note: </b><span>To </span><b>print</b> this <b><span>report card</span></b> click this button<button onclick="printSection()" style="margin-left: 0.5%;"><b>Print Report Card</b></button></p>
     <section id="sectionToPrint">
         <h1 id="h1">Report Card</h1>
         <div class="thre">
@@ -27,7 +27,8 @@
     <h4 class="conditionfive"></h4>
     <h4 class="conditionsix"></h4>
     <h3 id="number-text" style="background: deepskyblue;text-align: center;"></h3>
-    <ul id="out-put" style="background:brown;color: white;padding: 2%;list-style: none;border: 1px solid black;"><b><span id="sel">Correct Selected Answers Of Questions:</span></b> </ul>
+
+    <ul id="out-put" style="background:brown;color: white;padding: 2%;list-style: none;border: 1px solid black;background-image: url('./Assets/Images/pexels-francesco-ungaro-281260.jpg');"><b><span id="sel">Correct Selected Answers Of Questions:</span></b> </ul>
     <h3 class="conditionseven" style="background: #000;border: 1px solid white;color: white;padding: 1%;">Passing Marks: <b>50</b></h3>
     <h3 class="newhthree"></h3>
     <div class="gradeT">
@@ -73,7 +74,7 @@ console.log(storedChechArrJSON)
 numberText.innerHTML = `Correct Answers: ${number}`;
 hk.innerHTML = `${email1}`;
 if(username === null){
-    hv.innerHTML = 'Your Name: abc'
+    hv.innerHTML = 'Your Name: null'
 }else{
     hv.innerHTML = `${user1}`;
 }
