--- a/register.html
+++ b/register.html
@@ -43,16 +43,16 @@
                                         
                                             <div class="mb-3">
                                               <label for="exampleInputPassword1" class="form-label ">User Name:</label>
-                                              <input type="text" class="form-control " id="fullName">
+                                              <input type="text" class="form-control " id="fullName"  placeholder="Enter your full name" required>
                                             </div>
                                             <div class="mb-3">
                                               <label  class="form-label">Email address:</label>
-                                              <input id="email" type="email" class="form-control" >
+                                              <input id="email" type="email" class="form-control" placeholder="Enter your email" required>
                                               <div id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</div>
                                             </div>
                                             <div class="mb-3">
                                               <label  class="form-label">Password:</label>
-                                              <input  id="password" type="password" class="form-control" >
+                                              <input  id="password" type="password" class="form-control"  placeholder="Enter your password" required>
                                             </div>
                                             
                                             <button type="submit">Register <i class="fa-regular fa-user"></i></button>
