--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">User Name:</label>
-      <input type="text" class="form-control" id="fullName">
+      <input type="text" class="form-control" id="fullName"  placeholder="Enter your full name" required>
     </div>
     <div class="mb-3">
       <label  class="form-label">Email address:</label>
-      <input  id="email-login" type="email" class="form-control" >
+      <input  id="email-login" type="email" class="form-control" placeholder="Enter your full name" required>
     </div>
     <div class="mb-3">
       <label  class="form-label">Password:</label>
-      <input  id="password-login" type="password" class="form-control" >
+      <input  id="password-login" type="password" class="form-control" placeholder="Enter your full name" required>
     </div>
     
     <button type="submit">Log in <i class="fa-regular fa-user"></i></button>
