--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                                       <!-- Form Started -->
 <div class="form_div d-flex justify-content-center" style="width: 100%;">
-  <form>
+  <form id="loginForm">
     <h3 style="font-weight: normal;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;letter-spacing: 2px;border: 2px solid black;border-radius: 10px;padding: 2%;text-align: center;color: black;">Login</h3>
 
     <div class="mb-3">
@@ -45,11 +45,11 @@
     </div>
     <div class="mb-3">
       <label  class="form-label">Email address:</label>
-      <input  id="email-login" type="email" class="form-control" placeholder="Enter your full name" required>
+      <input  id="email" type="email" class="form-control" placeholder="Enter your full name" required>
     </div>
     <div class="mb-3">
       <label  class="form-label">Password:</label>
-      <input  id="password-login" type="password" class="form-control" placeholder="Enter your full name" required>
+      <input  id="password" type="password" class="form-control" placeholder="Enter your full name" required>
     </div>
     
     <button type="submit">Log in <i class="fa-regular fa-user"></i></button>
