--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
 
                                         <!-- Form Started -->
                                         <div class="form_div d-flex justify-content-center" style="width: 100%;">
-                                          <form>
+                                          <form id="registerform">
                                             <h3 style="font-weight: normal;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;letter-spacing: 2px;border: 2px solid black;border-radius: 10px;padding: 2%;text-align: center;color: black;">Register</h3>
                                         
                                             <div class="mb-3">
