--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <img src="./Assets/Images/logo-OpazD70S.png" class="navbar-brand" alt="logo-image" style="width: 9vw;margin: auto;">
                                      <h6 style="text-align: center;font-size: 12px;">LOGIN</h6>
                                               <div class="but_divv">
-                                                <button id="nm"><a href="index.html" style="text-decoration: none;color: black;">LOGIN</a></button>
-                                                <button id="mk"><a href="register.html" style="text-decoration: none;color: black;">REGISTER</a></button>
+                                                <button id="nm" ><a href="index.html" style="text-decoration: none;color: black;" onclick="loged()">LOGIN</a></button>
+                                                <button id="mk" ><a href="register.html" style="text-decoration: none;color: black;" onclick="reg()">REGISTER</a></button>
                                               </div>
 
     <div class="div1">
